<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/cpPracRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/cpPracticeRadio"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp" />

            <RadioButton
                android:id="@+id/cpPerfRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cpPerformRadio" />
        </LinearLayout>

        <EditText
            android:id="@+id/cpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:hint="@string/cpNameHint" />

        <EditText
            android:id="@+id/cpBand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:hint="@string/cpBandHint" />

        <TextView
            android:id="@+id/cpDate"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Select Date"
            android:paddingLeft="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/cpTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/cpTimeHint"
            android:inputType="time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cpAMRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cpAMRadio" />

            <RadioButton
                android:id="@+id/cpPMRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpPMRadio" />

        </LinearLayout>


        <EditText
            android:id="@+id/cpLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:hint="@string/cpLocationHint" />

        <EditText
            android:id="@+id/cpDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:hint="@string/cpDescriptionHint" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/cpCreateButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/cpCreateButton" />

            <Button
                android:id="@+id/cpCancelButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/cpCancelButton" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>